[tool.mypy]
mypy_path = "stubs"

warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

strict_optional = true
implicit_optional = true

disallow_any_unimported = true
disallow_subclassing_any = true
#disallow_any_generics = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true

[project]
name = "april_vision"
description = "An AprilTags wrapper with camera discovery and axis conversion."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Will Barber"}, {name = "Joshua Perriman"}]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pyapriltags >=3.3.0.2,<4",
    "numpy >= 1.21,<2",
    "pyquaternion >=0.9.9,<1",
    # winrt only supports upto python 3.10
    # winrt >=1.0.21033.1, <2; platform_system=='Windows'
    "winsdk >=1.0.0b7,<2; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy",
    "build",
    "types-Pillow",
    "types-tabulate",
    "pytest",
    "pytest-cov",
]
cli = [
    "Pillow >=9.4.0,<10",
    "tabulate >=0.9.0,<1",
    "font-roboto >=0.0.1",
]
opencv = ["opencv-python-headless >=4,<5"]

[project.scripts]
april_vision = "april_vision.cli:main"

[project.urls]
Repository = "https://github.com/WillB97/april_vision"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools>=60", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "april_vision/_version.py"
