[metadata]
name = april_vision
description = An AprilTags wrapper with camera discovery and axis conversion.
license = MIT
author = "Will Barber, Joshua Perriman"
url = https://github.com/WillB97/april_vision

[options]
packages = find:
include_package_data = True
install_requires =
    pyapriltags >=3.3.0.post1, <4
    numpy >= 1.21, <2
    pyquaternion >=0.9.9, <1

[options.extras_require]
dev =
    flake8
    isort
    mypy
    build
j5 =
    j5 >=1, <2
cli =
    opencv-python >=4, <5
opencv =
    opencv-python-headless >=4, <5

python_requires >= 3.8
