[metadata]
name = april_vision
description = An AprilTags wrapper with camera discovery and axis conversion.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = "Will Barber, Joshua Perriman"
url = https://github.com/WillB97/april_vision

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    pyapriltags >=3.3.0.post1, <4
    numpy >= 1.21, <2
    pyquaternion >=0.9.9, <1
    Pillow
    libusb-package >=1.0.26.1, <2
    pyusb >=1.2.1, <2

[options.extras_require]
dev =
    flake8
    isort
    mypy
    build
    types-Pillow
j5 =
    j5 >=1, <2
cli =
    opencv-python >=4, <5
opencv =
    opencv-python-headless >=4, <5

[options.entry_points]
console_scripts =
    april_vision = april_vision.cli:main
